--- a/templates/about.html
+++ b/templates/about.html
@@ -9,10 +9,10 @@
 </style>
 {%endblock%}
 {%block title%}
-About
+Professors
 {% endblock %}
 <!--<h1>About<i aria-hidden="true"></i></h1>-->
-<h1 class="mt-5"><i class="fa fa-address-card-o" aria-hidden="true"></i> About Me</h1>
+<h1 class="mt-5"><i class="fa fa-address-card-o" aria-hidden="true"></i> Professors</h1>
 <p>I am currently a first semester junior enrolled at the University of Delaware with an Accounting/MIS double major. I've done work with the University of Delware's Sports Marketing Student Team, having experience in running in-game promotions and helping fans with any needs or concerns they had. I am also a member of the professional
 business fraternity DSP, which is involved in many events on campus that help promote the study of business. </p>
 {% endblock %}
