--- a/templates/artist-edit.html
+++ b/templates/artist-edit.html
@@ -1,18 +1,18 @@
 {% extends "home-base.html"%}
-{% block title %}Edit Artist{% endblock %}
+{% block title %}Edit Professor{% endblock %}
 {% block page_content%}
 
   <!-- Page Content -->
   <div class="container">
-    <h1 class="mt-5"><i class="fa fa-music" aria-hidden="true"></i> Edit Artist:</h1>
-    <form action="/artist/edit/{{artist.id}}" method="post">
+    <h1 class="mt-5"><i class="fa fa-music" aria-hidden="true"></i> Edit Professor:</h1>
+    <form action="/professor/edit/{{professor.id}}" method="post">
       <div class="form-group">
         <label>Name</label>
-        <input class="form-control" type="text" name="name" value="{{artist.name}}" required="true">
+        <input class="form-control" type="text" name="name" value="{{professor.name}}" required="true">
       </div>
       <div class="form-group">
         <label>About</label>
-        <textarea class="form-control" name="about" required="true">{{artist.about}}</textarea>
+        <textarea class="form-control" name="about" required="true">{{professor.about}}</textarea>
       </div>
       <button type="submit" class="btn btn-primary">Save Changes</button>
     </form>
