--- a/templates/song-add.html
+++ b/templates/song-add.html
@@ -1,45 +1,27 @@
 {% extends "home-base.html"%}
-{% block title %}Add Songs{% endblock %}
+{% block title %}Add Courses{% endblock %}
 {% block page_content%}
 
   <!-- Page Content -->
   <div class="container">
-    <h1 class="mt-5"><i class="fa fa-music" aria-hidden="true"></i> Add Songs:</h1>
+    <h1 class="mt-5"><i class="fa fa-music" aria-hidden="true"></i> Add Courses:</h1>
     <form action="/song/add" method="post">
       <div class="form-group">
-        <label>Name</label>
-        <input class="form-control" type="text" name="name" placeholder="Name of the Song" required="true">
+        <label>Course</label>
+        <input class="form-control" type="text" name="course"  required="true">
       </div>
       <div class="form-group">
-        <label>Year</label>
-        <select class="form-control" name="year">
-          {% for i in range(1950, 2025) %}
-            {% if i == 2017 %}
-              <option selected="selected">{{i}}</option>
-            {% else %}
-              <option>{{i}}</option>
-            {% endif %}
-          {% endfor %}
-        </select>
-      </div>
-      <div class="form-group">
-        <label>Artist</label>
-        <select class="form-control" name="artist">
-          {% for artist in artists %}
-              <option>{{artist.name}}</option>
-          {% endfor %}
-        </select>
-      </div>
-      <div class="form-group">
-        Artist not in the list? <a href="/artist/add" class="btn btn-success" role="button" aria-disabled="true">Add Artists</a>
+        <label>Number</label>
+        <input class="form-control" type="text" name="number"  required="true">
       </div>
 
+
       <div class="form-group">
-        <label>Lyrics</label>
-        <textarea class="form-control" name="lyrics" placeholder="Lyrics" required="true"></textarea>
+        <label>Description</label>
+        <textarea class="form-control" name="description"  required="true"></textarea>
       </div>
-      <button type="submit" class="btn btn-primary">Add Song</button>
+      <button type="submit" class="btn btn-primary">Add Course</button>
     </form>
   </div>
 
-{% endblock%}
+{%endblock%}
