--- a/templates/song-all.html
+++ b/templates/song-all.html
@@ -1,4 +1,4 @@
-{% extends "home-base.html"%}
+{%extends "home-base.html"%}
 {% block title %}All Songs{% endblock %}
 {% block page_content%}
 
@@ -13,11 +13,10 @@
     <thead>
       <tr>
         <th>#</th>
-        <th>Name</th>
-        <th>Year</th>
-        <th>Artist</th>
-        <th>Lyrics</th>
-        <th>Actions</th>
+        <th>Course</th>
+        <th>Number</th>
+        <th>Description</th>
+
       </tr>
     </thead>
     <tbody>
@@ -28,7 +27,7 @@
         <td>{{song.year}}</td>
         <td>{{song.artist.name}}</td>
         <td>
-          <!--  view lyrics button trigger modal -->
+
           <button type="button" class="btn btn-info" data-toggle="modal" data-target="#{{song.id}}">
                 View
               </button>
@@ -55,8 +54,6 @@
         </td>
         <td>
           <a href="/song/edit/{{song.id}}" class="btn btn-success" role="button" aria-disabled="true">Edit</a>
-          <a href="/song/delete/{{song.id}}" class="btn btn-danger" role="button" aria-disabled="true">Delete</a>
-          <button class="btn btn-warning delete_ajax_btn" data-song-id={{song.id}}>Delete Ajax</button>
         </td>
       </tr>
 
@@ -67,57 +64,4 @@
   <h3>There are no songs in the database yet.</h3> {% endif %}
 </div>
 
-{% endblock%}
-
-{% block scripts%}
-{{super()}}
-<script>
-  $(document).ready(function() {
-    $(".delete_ajax_btn").click(function(event) {
-      var song_id = $(this).data("song-id");
-      // get the table row of this song
-      var row = $(this).parent().parent();
-      swal({
-          title: "Are you sure?",
-          // text: "You are going to delete song" + song.id + ".",
-          type: "warning",
-          html: true,
-          showCancelButton: true,
-          confirmButtonColor: "#DD6B55",
-          confirmButtonText: "Yes, delete it!",
-          closeOnConfirm: false,
-          showLoaderOnConfirm: true
-        },
-        function(isConfirm) {
-          if (isConfirm) {
-            $.ajax({
-                type: "DELETE",
-                url: "/api/song/" + song_id,
-                success: function(response) {
-                  console.log(response);
-                  row.remove(); // remove the table row
-                  swal({
-                    title: "Deleted!",
-                    text: response.name + " has been deleted.",
-                    type: "success",
-                    timer: 2500,
-                    showConfirmButton: false
-                  }); // end of SweetAlert
-                } // end of success callback function
-              }) // end of ajax call
-              .fail(function(error) {
-                // console.log(data);
-                swal({
-                  title: "Oops...",
-                  text: "Deletion failed",
-                  type: "error",
-                  timer: 2000,
-                  showConfirmButton: false
-                }); // end of SweetAlert
-              }); // end of fail callback function
-          } // end of if confirmed block
-        }); // end of confirmed function of SweetAlert
-    }); // end of button click event function
-  }); // end doc ready
-</script>
 {% endblock%}
