--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
 
   <!-- Page Content -->
   <div class="container">
-    <h1 class="mt-5"><i class="fa fa-bullhorn" aria-hidden="true"></i> Welcome to SongBase!</h1>
-    <p>This is a sample project for learning Flask.</p>
+    <h1 class="mt-5"><i class="fa fa-bullhorn" aria-hidden="true"></i> Welcome to ProfessorBase!</h1>
+    <p>Find and add any UD professor.</p>
   </div>
 
 {% endblock%}
