--- a/templates/professor-all.html
+++ b/templates/professor-all.html
@@ -4,7 +4,7 @@
 
   <!-- Page Content -->
   <div class="container">
-    <h1 class="mt-5"><i class="fa fa-user-circle-o" aria-hidden="true"></i> Professors:</h1>
+    <h1 class="mt-5"><i  aria-hidden="true"></i> Professors:</h1>
     <div class="row bottom-margin">
       <a href="/professor/add" class="btn btn-primary" role="button" aria-disabled="true">Add Professors</a>
     </div>
@@ -22,7 +22,7 @@
           <tr>
               <th scope="row">{{professor.id}}</th>
               <td>{{professor.name}}</td>
-              <td>{{professor.about}}</td>
+              <td>{{professor.department}}</td>
               <td>
                 <a href="/professor/edit/{{professor.id}}" class="btn btn-success" role="button">Edit</a>
 
