--- a/templates/course-add.html
+++ b/templates/course-add.html
@@ -1,14 +1,14 @@
 {% extends "home-base.html"%}
-{% block title %}Edit Song{% endblock %}
+{% block title %}Add Courses{% endblock %}
 {% block page_content%}
 
   <!-- Page Content -->
   <div class="container">
-    <h1 class="mt-5"><i class="fa fa-music" aria-hidden="true"></i> Edit Song:</h1>
-    <form action="/song/edit/{{song.id}}" method="post">
+    <h1 class="mt-5"><i class="fa fa-music" aria-hidden="true"></i> Add Courses:</h1>
+    <form action="/course/add" method="post">
       <div class="form-group">
-        <label>Name</label>
-        <input class="form-control" type="text" name="name" value="{{song.name}}" required="true">
+        <label>Course</label>
+        <input class="form-control" type="text" name="course"  required="true">
       </div>
       <div class="form-group">
         <label>Number</label>
@@ -20,8 +20,8 @@
         <label>Description</label>
         <textarea class="form-control" name="description"  required="true"></textarea>
       </div>
-      <button type="submit" class="btn btn-primary">Save Changes</button>
+      <button type="submit" class="btn btn-primary">Add Course</button>
     </form>
   </div>
 
-{% endblock%}
+{%endblock%}
