--- a/templates/course-all.html
+++ b/templates/course-all.html
@@ -4,11 +4,11 @@
 
 <!-- Page Content -->
 <div class="container">
-  <h1 class="mt-5"><i class="fa fa-music" aria-hidden="true"></i> Songs:</h1>
+  <h1 class="mt-5"><i  aria-hidden="true"></i> Courses:</h1>
   <div class="row bottom-margin">
-    <a href="/song/add" class="btn btn-primary" role="button" aria-disabled="true">Add Songs</a>
+    <a href="/course/add" class="btn btn-primary" role="button" aria-disabled="true">Add Songs</a>
   </div>
-  {% if songs %}
+  {% if courses %}
   <table class="table">
     <thead>
       <tr>
@@ -20,30 +20,30 @@
       </tr>
     </thead>
     <tbody>
-      {% for song in songs %}
+      {% for course in courses %}
       <tr>
-        <th scope="row">{{song.id}}</th>
-        <td>{{song.name}}</td>
-        <td>{{song.year}}</td>
-        <td>{{song.artist.name}}</td>
+        <th scope="row">{{course.id}}</th>
+        <td>{{course.name}}</td>
+        <td>{{course.number}}</td>
+
         <td>
 
-          <button type="button" class="btn btn-info" data-toggle="modal" data-target="#{{song.id}}">
+          <button type="button" class="btn btn-info" data-toggle="modal" data-target="#{{course.id}}">
                 View
               </button>
 
           <!-- Modal -->
-          <div class="modal fade" id="{{song.id}}" tabindex="-1" role="dialog">
+          <div class="modal fade" id="{{course.id}}" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title">{{song.name}}</h5>
+                  <h5 class="modal-title">{{course.name}}</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                       </button>
                 </div>
                 <div class="modal-body">
-                  <pre>{{song.lyrics}}</pre>
+                  <pre>{{course.description}}</pre>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -53,7 +53,7 @@
           </div>
         </td>
         <td>
-          <a href="/song/edit/{{song.id}}" class="btn btn-success" role="button" aria-disabled="true">Edit</a>
+          <a href="/course/edit/{{course.id}}" class="btn btn-success" role="button" aria-disabled="true">Edit</a>
         </td>
       </tr>
 
@@ -61,7 +61,7 @@
     </tbody>
   </table>
   {% else %}
-  <h3>There are no songs in the database yet.</h3> {% endif %}
+  <h3>There are no courses in the database yet.</h3> {% endif %}
 </div>
 
 {% endblock%}
