--- a/templates/home-base.html
+++ b/templates/home-base.html
@@ -3,7 +3,7 @@
 
 <head>
   {% block head %}
-  <title>{% block title%}{% endblock%} - SongBase</title>
+  <title>{% block title%}{% endblock%} - ProfessorBase</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -27,10 +27,10 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="/">
+    <!--  <a class="navbar-brand" href="/">
          <img src="{{ url_for('static', filename='img/songbase-logo.png') }}"
-          alt="SongBase" width="150">
-       </a>
+          alt="ProfessorBase" width="150">
+       </a>-->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
        </button>
@@ -42,13 +42,10 @@
              </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/artists">Artists</a>
+            <a class="nav-link" href="/professors">Professors</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/songs">Songs</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about">About</a>
+            <a class="nav-link" href="/courses">Courses</a>
           </li>
         </ul>
       </div>
