--- a/templates/professor-all.html
+++ b/templates/professor-all.html
@@ -25,6 +25,9 @@
               <td>{{professor.department}}</td>
               <td>
                 <a href="/professor/edit/{{professor.id}}" class="btn btn-success" role="button">Edit</a>
+                <a href="/professor/delete/{{professor.id}}" class="btn btn-success" role="button">Delete</a>
+              </td>
+              <td>
 
               </td>
           </tr>
