--- a/templates/course-all.html
+++ b/templates/course-all.html
@@ -54,6 +54,7 @@
         </td>
         <td>
           <a href="/course/edit/{{course.id}}" class="btn btn-success" role="button" aria-disabled="true">Edit</a>
+          <a href="/course/delete/{{course.id}}" class="btn btn-success" role="button" aria-disabled="true">Delete</a>
         </td>
       </tr>
 
