--- a/templates/home-base.html
+++ b/templates/home-base.html
@@ -27,10 +27,10 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-    <!--  <a class="navbar-brand" href="/">
+      <a class="navbar-brand" href="/">
          <img src="{{ url_for('static', filename='img/songbase-logo.png') }}"
           alt="ProfessorBase" width="150">
-       </a>-->
+       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
        </button>
